@@ -8,7 +8,7 @@
 // Template, add newest changes here
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v5.0.0-alpha3...master[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v5.0.0-alpha4...master[Check the HEAD diff]
 
 ==== Breaking changes
 
@@ -50,6 +50,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha3...master[Check the HEAD d
 
 - Periodically log internal metrics. {pull}1955[1955]
 - Add enable-setting to all output modules. {pull}1987[1987]
+- Command line flag -c can be used multiple times. {pull}1985[1985]
 
 *Metricbeat*
 
